# rat-pac

./: .dockerignore  .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.miles  Dockerfile.modern  Makefile  README.md  RUN_0.12pcc.sh  RUN_0.12pccibd.sh  RUN_0.12pcclinedibd.sh  RUN_0.12pccsquareibd.sh  RUN_0.13pcc.sh  RUN_0.13pccibd.sh  RUN_0.13pcclinedibd.sh  RUN_0.13pccsquareibd.sh  RUN_0.14pcc.sh  RUN_0.14pccibd.sh  RUN_0.14pcclinedibd.sh  RUN_0.14pccsquareibd.sh  RUN_0.15pcc.sh  RUN_0.15pccibd.sh  RUN_0.15pcclinedibd.sh  RUN_0.15pccsquareibd.sh  RUN_0.16pcc.sh  RUN_0.16pccibd.sh  RUN_0.16pcclinedibd.sh  RUN_0.16pccsquareibd.sh  RUN_0.17pcc.sh  RUN_0.17pccibd.sh  RUN_0.17pcclinedibd.sh  RUN_0.17pccsquareibd.sh  RUN_0.18pcc.sh  RUN_0.18pccibd.sh  RUN_0.18pcclinedibd.sh  RUN_0.18pccsquareibd.sh  RUN_0.19pcc.sh  (+19 more)
config/: ARCH.gcc  ARCH.linuxx8664gcc  ARCH.macosx  ARCH.macosx64  Config.hh.in  rat-pac.csh.in  rat-pac.sh.in  ratpac.csh.in  ratpac.sh.in
data/: DAQ.ratdb  ES.ratdb  IBD.ratdb  IBD_Fairport.ratdb  MATERIALS.ratdb  MATERIALS_Watchman.ratdb  NOISEProc.ratdb  OPTICS.ratdb  PMT.ratdb  PMTCHARGE.ratdb  PMTTRANSIT.ratdb  SOLAR.ratdb  SPECTRUM.ratdb  spectra_fairport.ratdb
data/DarkBox/: DarkBox.geo  PMTINFO.ratdb
data/LEC/: NEPTUNE_wbls_5_5m_4m_20pct_2165mm.geo  PMTINFO.ratdb
data/PMT_DEV/: PMT_DEV.geo
data/SuperK/: SUPERK_PARAMS.ratdb  SuperK.geo  WATCHMAN_PARAMS.ratdb
data/Watchman/: Calibration.ratdb  DecayChamber.geo  MATERIALS_WM_wbls_Nov.ratdb  MATERIALS_Watchman.ratdb  OPTICS_WM_wbls_Nov.ratdb  OPTICS_Watchman.ratdb  PMTINFO.ratdb  WATCHMAN_PARAMS.ratdb  Watchman.geo
data/Watchman_Letterbox/: LETTERBOX_PARAMS.ratdb  PMTINFO.ratdb  Watchman_Letterbox.geo
data/Watchman_WLSP/: MATERIALS_Watchman.ratdb  OPTICS_Watchman.ratdb  SURFACES_Watchman.ratdb  WATCHMAN_PARAMS.ratdb  WLSPFRONTINFO.ratdb  Watchman_WLSP.geo  promptPositronTest.ratdb  testSpec.ratdb
data/Watchman_fairport_10m_10m_10pct_2700mm/: PMTINFO.ratdb  Watchman_fairport_10m_10m_10pct_2700mm.geo
data/Watchman_fairport_10m_10m_10pct_3700mm/: PMTINFO.ratdb  Watchman_fairport_10m_10m_10pct_3700mm.geo
doc/: conf.py  index.rst
mac/: .nfs00000000401e268500000064  .nfs000000004539eb0d00000063  .nfs00000000453c8e7600000065  WLSP_0.12pcc.mac  WLSP_0.12pcc_BASE.mac  WLSP_0.12pccibd.mac  WLSP_0.12pccibd_BASE.mac  WLSP_0.12pcclinedibd.mac  WLSP_0.12pccn.mac  WLSP_0.12pccn_BASE.mac  WLSP_0.12pccsquareibd.mac  WLSP_0.13pcc.mac  WLSP_0.13pcc_BASE.mac  WLSP_0.13pccibd.mac  WLSP_0.13pccibd_BASE.mac  WLSP_0.13pcclinedibd.mac  WLSP_0.13pccn.mac  WLSP_0.13pccn_BASE.mac  WLSP_0.13pccsquareibd.mac  WLSP_0.14pcc.mac  WLSP_0.14pcc_BASE.mac  WLSP_0.14pccibd.mac  WLSP_0.14pccibd_BASE.mac  WLSP_0.14pcclinedibd.mac  WLSP_0.14pccn.mac  WLSP_0.14pccn_BASE.mac  WLSP_0.14pccsquareibd.mac  WLSP_0.15pcc.mac  WLSP_0.15pcc_BASE.mac  WLSP_0.15pccibd.mac  WLSP_0.15pccibd_BASE.mac  WLSP_0.15pcclinedibd.mac  WLSP_0.15pccn.mac  WLSP_0.15pccn_BASE.mac  WLSP_0.15pccsquareibd.mac  WLSP_0.16pcc.mac  WLSP_0.16pcc_BASE.mac  WLSP_0.16pccibd.mac  WLSP_0.16pccibd_BASE.mac  WLSP_0.16pcclinedibd.mac  (+62 more)
src/: CMakeLists.txt  rat.cc  root.cc
src/cmd/: CMakeLists.txt
src/cmd/include/RAT/: ESgenMessenger.hh  IBDgenMessenger.hh
src/cmd/src/: ESgenMessenger.cc  GLG4DebugMessenger.cc  GLG4PrimaryGeneratorMessenger.cc  IBDgenMessenger.cc  ProcBlockManager.cc
src/core/: CMakeLists.txt  GLG4SteppingAction.cc  Gsim.cc  StackingAction.cc
src/core/include/RAT/: Gsim.hh  Log.hh
src/core/src/: GLG4VisManager.cc  Gsim.cc  Log.cc
src/daq/: CMakeLists.txt  LessSimpleDAQProc.cc
src/daq/include/RAT/: NoiseProc.hh  SplitEVDAQProc.hh
src/daq/src/: LessSimpleDAQProc.cc  NoiseProc.cc  SplitEVDAQProc.cc
src/db/: CMakeLists.txt
src/db/include/RAT/: DB.hh  DBTable.hh
src/ds/: CMakeLists.txt
src/ds/include/RAT/DS/: MC.hh  MCPMT.hh  MCPhoton.hh  Run.hh
src/fit/: CMakeLists.txt
src/fit/bonsai/: binfile.cc  bonsai.cc  bscalls.cc  centroid.cc  fit_param.cc  fourhitgrid.cc  goodness.cc  hits.cc  hitsel.cc  plato.cc  pmt_geometry.cc  timefit.cc  vertex.cc  vertexfit.cc
src/fit/include/RAT/: FitBonsaiProc.hh
src/fit/src/: FitBonsaiProc.cc
src/geo/: CMakeLists.txt  GeoBuilder.cc  GeoPMTFactoryBase.cc  GeoWatchmanShieldFactory.cc  WatchmanDetectorFactory.cc
src/geo/include/RAT/: LetterboxFactory.hh  WatchmanWLSPDetectorFactory.hh
src/geo/src/: DetectorConstruction.cc  GeoBuilder.cc  GeoCherenkovSourceFactory.cc  GeoPMTFactoryBase.cc  GeoPMTParser.cc  LetterboxFactory.cc  WLSPCoverFactory.cc  WLSPFactory.cc  WatchmanDetectorFactory.cc  WatchmanWLSPDetectorFactory.cc  WatchmanWLSPSquareDetectorFactory.cc
src/io/: CMakeLists.txt
src/io/src/: TrackCursor.cc
src/physics/: CMakeLists.txt  Dicebox158Gd.cc  PhysicsList.cc
src/physics/include/RAT/: Dicebox158Gd.hh
src/physics/src/: Dicebox158Gd.cc  GLG4PMTOpticalModel.cc  GLG4Scint.cc  PhysicsList.cc
src/stlplus/: CMakeLists.txt  debug.cc  debug.hpp  hash.tpp  persistent.cc  persistent.hpp  persistent.tpp  string_utilities.cc
src/stlplus/include/: hash.hpp  smart_ptr.hpp  smart_ptr.tpp  string_utilities.hpp
src/stlplus/src/: debug.cc  dprintf.cc  file_system.cc  fileio.cc  multiio.cc  persistent.cc  string_utilities.cc  textio.cc
src/util/: CMakeLists.txt  GLG4StringUtil.cc  GLG4StringUtil.hh
src/util/include/RAT/: GLG4StringUtil.hh  PMTMatching.hh
src/util/src/: MultiChargeDist.cc  PMTMatching.cc
tools/: CMakeLists.txt  fixDynamicLink.py  timeRes.C  timeResiduals.C
tools/bonsai/: CMakeLists.txt  Makefile  bonsai  bonsai.cc
tools/bonsai/bonsai.dSYM/Contents/: Info.plist
tools/bonsai/bonsai.dSYM/Contents/Resources/DWARF/: bonsai
tools/docker/: boulby.mac  dbonsai  dimage  drat  dratx  droot  drootx  dwatchmakers
tools/rat/: CMakeLists.txt  rat.cc
tools/root/: CMakeLists.txt
tools/visualizer/: CMakeLists.txt  Makefile  display.C  visualizer.cc
util/: baseline.py  geoneutrino2ratdb.py  geoneutrino2ratdb_new.py  lec.py  letterbox.py  plot_pmtinfo.py  prod.sh  tradestudy_BOX.py  tradestudy_Fairport.py  tradestudy_RC.py
(+216 files in other folders)
